--- a/Style.css
+++ b/Style.css
@@ -6,6 +6,7 @@
 				font-size: 70px;
 				text-align: center;
 				background-color: red;
+				margin-bottom: 10px;
 			} 
 
 			p {
@@ -15,14 +16,11 @@
 			}
 
 			#links {
-				margin-left:auto;
-				margin-right: auto;
-				width: 11%;
-				padding-left: auto;
-				padding-right: auto;
+				text-align: center;
 				font-size: 20px;
 
 			}
+
 
 			a:link, a:visited {
 				color:red;
@@ -35,10 +33,4 @@
 
 			a:active {
 				color: brown;	
-			}
-
-			#choice3 {
-				color: darkblue;
-					
-				font-size: 20px;
 			}
