--- a/StyleHulk.css
+++ b/StyleHulk.css
@@ -16,12 +16,8 @@
 			}
 
 			#links {
-				margin-left:auto;
-				margin-right: auto;
-				width: 17%;
-				padding-left: auto;
-				padding-right: auto;
-				font-size: 20px;
+				text-align: center;
+				font-size: 20%;
 
 			}
 
