--- a/StyleHulkBD.css
+++ b/StyleHulkBD.css
@@ -1,5 +1,5 @@
 			body {
-				background-color: darkblue;
+				background-color: darkgreen;
 			}
 
 			h1  {
@@ -22,9 +22,17 @@
 
 
 
+			img.IM {
+				display: block;
+				width :30%;
+				margin-right: auto;
+				margin-left: auto;
+			}
+
 			#link {
 				text-align: center;
 				font-size: 20px;
+
 			}
 
 			a:link, a:visited {
